2009-04-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Completed backports of fixes for
	[Bug 2494093] and [Bug 2553906].

2009-03-30  Don Porter  <dgp@users.sourceforge.net>

	* doc/Alloc.3:  Size argument is "unsigned int".  [Bug 2556263]

	* generic/tclStringObj.c:       Added protections from invalid memory
	* generic/tclTestObj.c:         accesses when we append (some part of)
	* tests/stringObj.test:         a Tcl_Obj to itself.  Added the
	appendself and appendself2 subcommands to the [teststringobj] testing
	command and added tests to the test suite.  [Bug 2603158]

2009-03-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c (TclPathPart):	TclPathPart() was computing
	* tests/fileName.test:	the wrong results for both [file dirname] and
	[file tail] on "path" arguments with the PATHFLAGS != 0 intrep and
	with an empty string for the "joined-on" part.  [Bug 2710920]

2009-03-20  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:       Test stringObj-6.9 checks that
	* tests/stringObj.test:         Tcl_AppendStringsToObj() no longer
	crashes when operating on a pure unicode value.  [Bug 2597185]

	* generic/tclExecute.c (INST_CONCAT1):  Panic when appends overflow
	the max length of a Tcl value.  [Bug 2669109]

2009-03-18  Don Porter  <dgp@users.sourceforge.net>

	* win/tclWinFile.c (TclpObjNormalizePath):      Corrected Tcl_Obj leak.
	Thanks to Joe Mistachkin for detection and patch.  [Bug 2688184].

2009-03-15  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclPosixStr.c (Tcl_SignalId,Tcl_SignalMsg): [Patch 1513655]:
	Added support for SIGINFO, which is present on BSD platforms.

2009-02-20  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c: Fixed mistaken logic in TclFSGetPathType()
	* tests/fileName.test:  that assumed (not "absolute" => "relative").
	This is a false assumption on Windows, where "volumerelative" is
	another possibility.  [Bug 2571597].
